--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "node": "^16.0.0"
+    "node": "16.0.0"
   }
 }
