--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "react": "^0.0.0-experimental-4a4ef2706-20230212",
     "react-dom": "^0.0.0-experimental-4a4ef2706-20230212",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
