--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+
+    "node": ">=16.19.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -43,8 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node": "16.0.0"
   }
+  
 }
