--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
+    "serve": "^14.2.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "engines": {
-
     "node": "16.19.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +48,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
