--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,22 @@
 /node_modules
 /.pnp
 .pnp.js
-/.env
+# /.env
 
 # testing
 /coverage
-/.env
+# /.env
 # production
 /build
-/.env
+# /.env
 
 # misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 npm-debug.log*
 yarn-debug.log*
